# gf-lsp

./: .gitattributes  .gitignore  .nixignore  README.md  cabal.project  default.nix  gf-lsp.cabal  hie.yaml  nix-shell  watch-install.sh
.github/workflows/: release.yaml
app/: CaptureStdio.hs  GFExtras.hs  GFTags.hs  Main.hs  Reactor.hs
nix/: bump-bounds.patch  expose-all.patch  revert-new-cabal-madness.patch  sources.json
src/: GfLsp.hs
test/: Main.hs
test/golden/: trailingWhitespace.txt
