cabal-version:       3.0

name:                gf-lsp
synopsis:            A Language Server Protocol server for Grammatical Framework
version:             0.0.1.0
homepage:            https://github.com/anka-213/gf-lsp
license:             BSD-3-Clause
author:              Andreas Källberg
maintainer:          Andreas Källberg
copyright:           Andreas Källberg
category:            Package.Category
build-type:          Simple

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     GfLsp
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >= 4.11 && < 5
                     , lsp
                     , lsp-types

executable gf-lsp
  main-is:            Reactor.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -O2
  build-depends:      base
                    -- , gf-lsp
                    , aeson
                    , directory
                    , hslogger
                    , lens
                    , lsp
                    , lsp-types
                    , stm
                    , text
                    , unordered-containers
                    , gf

test-suite gf-lsp-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.11 && < 5
                  , gf-lsp
                  , hedgehog
                  , lsp-test
