cabal-version:       3.0

name:                gf-lsp
synopsis:            A Language Server Protocol server for Grammatical Framework
version:             1.0.5.1
homepage:            https://github.com/anka-213/gf-lsp
license:             BSD-3-Clause
author:              Andreas Källberg
maintainer:          Andreas Källberg
copyright:           Andreas Källberg
category:            Package.Category
build-type:          Simple

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     GfLsp
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >= 4.11 && < 5
                     , lsp
                     , lsp-types

executable gf-lsp
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -Wall -threaded -O2
  other-modules:      GFExtras
                    , GFTags
                    , Reactor
                    , CaptureStdio
  build-depends:      base
                    -- , gf-lsp
                    , aeson
                    , containers
                    , directory
                    , filepath
                    , gf
                    -- , hslogger
                    , co-log-core
                    -- , co-log-concurrent
                    , lens
                    , lsp < 2
                    , lsp-types < 2
                    , prettyprinter
                    , process
                    , split
                    , stm
                    , text
                    , time
                    , unordered-containers
                    , silently

test-suite gf-lsp-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test,app
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  other-modules:      GFExtras
                    , GFTags
                    , Reactor
                    , CaptureStdio
  build-depends:    base >=4.11 && < 5
                  , gf-lsp
                  -- , hedgehog
                  , lsp-test
                  , tasty
                  , tasty-hunit
                  -- , tasty-hedgehog
                  , raw-strings-qq

                  -- TODO: Use an actual library or something
                  -- Copied from executable above
                    , aeson
                    , containers
                    , directory
                    , filepath
                    , gf
                    -- , hslogger
                    , co-log-core
                    -- , co-log-concurrent
                    , lens
                    , lsp
                    , lsp-types
                    , prettyprinter
                    , process
                    , split
                    , stm
                    , text
                    , time
                    , unordered-containers
                    , silently

